# cmd/backend-api/main.go
@@ -13,36 +13,49 @@ import (
 	"github.com/gofiber/swagger"
 	"github.com/kanta/backend-challenge/config"
 	"github.com/kanta/backend-challenge/docs"
+	"github.com/kanta/backend-challenge/infrastructure"
 	handlers "github.com/kanta/backend-challenge/internal/adapters/handlers/backend-handler"
+	"github.com/kanta/backend-challenge/internal/adapters/repositories"
 	"github.com/kanta/backend-challenge/internal/core/services"
+	"github.com/kanta/backend-challenge/middlewares"
 	"github.com/sirupsen/logrus"
 	"go.uber.org/zap"
 )
 
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
 func newRouter(handler handlers.BackEndHandler) *fiber.App {
 	app := fiber.New()
-	// TODO: register routes with handler
-
+	app.Use(middlewares.Logger())
 	docs.SwaggerInfo.Schemes = []string{"http"}
-	swagHanlder := swagger.HandlerDefault
-	swagHanlder = swagger.New(swagger.Config{URL: "doc.json"})
+	swagHandler := swagger.New(swagger.Config{URL: "doc.json"})
 
 	app.Get("/docs/*", func(c *fiber.Ctx) error {
-		// if !config.IsLocal() {
-		docs.SwaggerInfo.Schemes = []string{"https"}
-		docs.SwaggerInfo.BasePath = fmt.Sprintf("/%s/api/v1", c.Get("X-Forwarded-Prefix"))
-		// }
-		return swagHanlder(c)
+		docs.SwaggerInfo.Schemes = []string{"http"}
+		docs.SwaggerInfo.BasePath = "/api/v1"
+		return swagHandler(c)
 	})
-	// }
 
-	app.Use(cors.New())
+	app.Use(cors.New(cors.Config{
+		AllowOrigins: "*",
+		AllowHeaders: "Origin, Content-Type, Accept, Authorization",
+	}))
 	app.Get("/health", func(c *fiber.Ctx) error {
 		return c.SendString("server is running")
 	})
 
 	v1 := app.Group("/api/v1")
-	fmt.Print(v1)
+
+	v1.Post("/register", handler.Register)
+	v1.Post("/login", handler.Login)
+
+	protected := v1.Group("", middlewares.JWTAuth(config.Get().JWT_Secret))
+	protected.Post("/users", handler.CreateUser)
+	protected.Get("/users/:id", handler.GetUserByID)
+	protected.Get("/users", handler.ListUsers)
+	protected.Put("/users/:id", handler.UpdateUser)
+	protected.Delete("/users/:id", handler.DeleteUser)
 
 	return app
 }
@@ -59,7 +72,12 @@ func main() {
 	undo := zap.ReplaceGlobals(logger)
 	defer undo()
 
-	service := services.NewBackEndService()
+	mongoClient := infrastructure.NewMongoClient(config.Get().Mongo.URI)
+	defer infrastructure.MongoDisconnect(mongoClient)
+
+	userRepo := repositories.NewUserRepository(mongoClient, config.Get().Mongo.DB)
+	service := services.NewBackEndService(userRepo)
+
 	handler := handlers.NewBackEndHandler(service)
 
 	app := newRouter(handler)
